--- a/_config.yml
+++ b/_config.yml
@@ -3,30 +3,31 @@ repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: David Wernhart
+title: Software Developer
+email: david.wernhart96@gmail.com
+#website: www.github.com/sproogen/resume-theme
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+#twitter_username: facespics
+github_username:  davidwernhart
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+#instagram_username: chillwildlife
+linkedin_username: davidwernhart
 # pinterest_username: jekyll
-youtube_username: globalmtb
+#youtube_username: globalmtb
 # googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+Hello there!
+My name is David and I like to tinker with computers. At the age of 14, I built my first functional CPU out of logic components from inside a video game, with my excitement and expertise about this topic only growing since then.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  My current primary fields of expertise are: <mark>Game Development</mark> (Unity, LibGdx), <mark>App Development</mark> (Flutter) and <mark>Computer Vision</mark> (TensorFlow, OpenCV).
 
 # Projects Section
 # projects_title: Projects
@@ -40,11 +41,10 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
-  Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
+  Some of my other hobbies include:
+   - Skateboarding
    - Gaming
-   - Knitting
-   - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+   - [Making music](https://www.instagram.com/pinqinband/)
 
 # Footer
 footer_show_references: true
