--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,20 +1,13 @@
 - layout: left
-  name: FH Technikum Wien
+  name: UAS Technikum Wien
   dates: 2017 - 2020
   qualification: BSc Computer Science
   quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-  description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+    UAS Technikum Wien was founded in 1994 and in 2000 it became the first institution in Vienna to receive the status of a university of applied sciences. It became a member of the European University Association (EUA) in 2012 and is also a network partner of FEEI – Association of the Electrical and Electronics Industries.
+    
 - layout: left
   name: HTL Mistelbach
   dates: 2011 - 2016
-  qualification: BSc Computer Science
+  qualification: Higher Technical Education Degree
   quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-  description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+    As a technical high school with focus on biomedicine and health technology, HTL Mistelbach is well known for state-of-the-art, high-quality education.
