--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,10 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
+  company: DonkeyCat GmbH
+  link: https://www.donkeycat.com/
+  job_title: Mobile Game Developer
+  dates: April 2017 - Present
   quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+   DonkeyCat is an Austrian software company specialized on mobile app development
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    With the focus on bringing classic card games like *Schnopsn*, *Mills* and *Ten Down* to mobile devices, DonkeyCat has found wide success in local and international markets.
+    Starting as a part-time job to complement my studies, I eventually took on more and more complex projects, with games like *Old Maid* and *Mau Mau* being developed almost exclusively by me.
