--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,5 +9,9 @@
     With the focus on bringing classic card games like *Schnopsn*, *Mills* and *Ten Down* to mobile devices, DonkeyCat has found wide success in local and international markets.
     
     Starting as a part-time job to complement my studies, I eventually took on more and more complex projects, with games like *Old Maid* and *Mau Mau* being developed almost exclusively by me.
--  , Internships, :
-    - [company: DonkeyCat GmbH,company: DonkeyCat GmbH,company: DonkeyCat GmbH]
+
+<!-- {% raw %} -->
+```html
+raw html
+```
+<!-- {% endraw %}) -->
